Changes to be committed: 	modified:   docs/docs.go 	modified:   docs/swagger.json 	modified:   docs/swagger.yaml 	modified:   internal/app/apiserver/apiserver.go 	modified:   internal/app/apiserver/endpoints/chatEndpoints.go 	new file:   internal/app/apiserver/endpoints/messageendpoint.go 	modified:   internal/app/apiserver/endpoints/userEndpoints.go 	modified:   internal/app/model/chatmessage.go 	modified:   internal/app/store/chatmessagerepositoy.go
Added new endpoints and functional
