# internal/app/apiserver/endpoints/userEndpoints.go
@@ -43,13 +43,12 @@ func (ep *Endpoints)CreateUser(g *gin.Context){
 // @Tags user
 // @Accept json
 // @Produce json
-// @Param id query integer true "User id"
+// @Param id path integer true "User id"
 // @Success 200 {string} Helloworld
-// @Router /user [delete]
+// @Router /user/{id} [delete]
 func (ep *Endpoints)DeleteUser(g *gin.Context){
 
-	//g.JSON(http.StatusOK,g.Param("id"))
-	id, err := strconv.Atoi(g.Query("id"))
+	id, err := strconv.Atoi(g.Param("id"))
 
 	if err != nil{
 		g.JSON(http.StatusBadRequest,gin.H{"error": err.Error()})
@@ -63,24 +62,19 @@ func (ep *Endpoints)DeleteUser(g *gin.Context){
 }
 
 // PingExample godoc
-// @Summary get user by id / get all users
+// @Summary get user by id
 // @Schemes
-// @Description get user by id or get all users if id == "" (empty)
+// @Description get user by id
 // @Tags user
 // @Accept json
 // @Produce json
-// @Param id query integer false "User id"
+// @Param id path integer false "User id"
 // @Success 200 {string} Helloworld
-// @Router /user [get]
-func (ep *Endpoints)GetUsers(g *gin.Context){
+// @Router /user/{id} [get]
+func (ep *Endpoints)GetUser(g *gin.Context){
 	var user *model.User
 
-	stringId := g.Query("id")
-
-	if stringId == ""{
-		ep.getAllUsers(g)
-		return
-	}
+	stringId := g.Param("id")
 
 	id, err := strconv.Atoi(stringId)
 
@@ -97,7 +91,16 @@ func (ep *Endpoints)GetUsers(g *gin.Context){
 	g.JSON(http.StatusOK,user)
 }
 
-func (ep *Endpoints)getAllUsers(g *gin.Context){
+// PingExample godoc
+// @Summary get all users
+// @Schemes
+// @Description get all users
+// @Tags user
+// @Accept json
+// @Produce json
+// @Success 200 {string} Helloworld
+// @Router /user [get]
+func (ep *Endpoints)GetAllUsers(g *gin.Context){
 	var users *[]model.User
 
 	users, err := ep.store.User().GetUsers()
