# internal/app/model/chatmessage.go
@@ -3,9 +3,9 @@ package model
 import "time"
 
 type ChatMessage struct {
-	ID          int
-	ChatID      int
-	UserID      int
-	Text        string
-	CreatedTime time.Time
+	ID          int       `json:"id"`
+	ChatID      int       `json:"chatid"`
+	UserID      int       `json:"userid"`
+	Text        string    `json:"text"`
+	CreatedTime time.Time `json:"createdtime"`
 }
